Add node port service for nginx app

--- a/fc-redirect-to-https.yaml
+++ b/fc-redirect-to-https.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
-  name: frontend-config
+  name: fc-redirect-to-https
 spec:
   redirectToHttps:
     enabled: true
