--- a/nps-phpmyadmin.yaml
+++ b/nps-phpmyadmin.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nps-nginx
+  name: nps-phpmyadmin
 spec:
   type: NodePort
   selector:
-    app: nginx
+    app: phpmyadmin
   ports:
   - protocol: TCP
     port: 80
